Fix restart button spacing

--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -753,7 +753,7 @@ svg {
 		font-size: 0.8em;
 		position: absolute;
 		right: 0;
-		top: 0;
+		top: 0.2em;
 		span {
 			opacity: 0.3;
 		}
